<resources>
    <string name="app_name">Vinyls</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_album_genero">Género</string>
    <string name="text_album_fecha">Fecha</string>
    <string name="text_album_descripcion">Descripción</string>
    <string name="cancion">Canciones</string>
    <string name="album">Albúm</string>
    <string name="agregar_track">Agregar canción al album</string>
    <string name="menu_album">Albumes</string>
    <string name="menu_Artistas">Artistas</string>
    <string name="menu_coleccionistas">Coleccionistas</string>
    <string name="fecha_de_nacimiento">Fecha de Nacimiento</string>
    <string name="pathAlbumes">M0.98,18L8.58,1.2H10.96L18.59,18H16.07L9.28,2.54H10.24L3.45,18H0.98ZM4.22,13.8L4.86,11.88H14.32L15.02,13.8H4.22ZM20.76,18V0.19H23.07V18H20.76ZM34.21,18.14C33.12,18.14 32.14,17.9 31.26,17.42C30.39,16.93 29.71,16.2 29.19,15.24C28.7,14.28 28.45,13.08 28.45,11.64C28.45,10.2 28.71,9 29.22,8.04C29.75,7.08 30.44,6.36 31.31,5.88C32.19,5.4 33.15,5.16 34.21,5.16C35.46,5.16 36.56,5.43 37.52,5.98C38.48,6.52 39.24,7.28 39.8,8.26C40.36,9.22 40.64,10.34 40.64,11.64C40.64,12.94 40.36,14.07 39.8,15.05C39.24,16.02 38.48,16.78 37.52,17.33C36.56,17.87 35.46,18.14 34.21,18.14ZM27.47,18V0.19H29.77V8.66L29.53,11.62L29.67,14.57V18H27.47ZM34.02,16.13C34.83,16.13 35.56,15.94 36.2,15.58C36.86,15.21 37.37,14.69 37.74,14.02C38.12,13.33 38.31,12.54 38.31,11.64C38.31,10.73 38.12,9.94 37.74,9.29C37.37,8.62 36.86,8.1 36.2,7.73C35.56,7.36 34.83,7.18 34.02,7.18C33.22,7.18 32.49,7.36 31.83,7.73C31.19,8.1 30.68,8.62 30.3,9.29C29.93,9.94 29.75,10.73 29.75,11.64C29.75,12.54 29.93,13.33 30.3,14.02C30.68,14.69 31.19,15.21 31.83,15.58C32.49,15.94 33.22,16.13 34.02,16.13ZM49.18,18.14C48.09,18.14 47.13,17.94 46.3,17.54C45.48,17.14 44.84,16.54 44.38,15.72C43.93,14.89 43.7,13.85 43.7,12.6V5.28H46.01V12.34C46.01,13.58 46.3,14.52 46.9,15.14C47.5,15.77 48.35,16.08 49.44,16.08C50.24,16.08 50.94,15.92 51.53,15.6C52.12,15.26 52.58,14.78 52.9,14.16C53.22,13.52 53.38,12.75 53.38,11.86V5.28H55.68V18H53.5V14.57L53.86,15.48C53.44,16.33 52.82,16.98 51.98,17.45C51.15,17.91 50.22,18.14 49.18,18.14ZM75.98,5.16C77,5.16 77.91,5.36 78.69,5.76C79.47,6.16 80.08,6.77 80.51,7.58C80.96,8.4 81.19,9.43 81.19,10.68V18H78.88V10.94C78.88,9.71 78.59,8.78 78.02,8.16C77.44,7.54 76.63,7.22 75.59,7.22C74.83,7.22 74.15,7.38 73.58,7.7C73,8.02 72.55,8.5 72.23,9.12C71.93,9.74 71.78,10.52 71.78,11.45V18H69.47V10.94C69.47,9.71 69.19,8.78 68.61,8.16C68.05,7.54 67.24,7.22 66.19,7.22C65.43,7.22 64.77,7.38 64.19,7.7C63.62,8.02 63.17,8.5 62.85,9.12C62.53,9.74 62.37,10.52 62.37,11.45V18H60.07V5.28H62.27V8.66L61.91,7.8C62.31,6.97 62.93,6.32 63.76,5.86C64.59,5.39 65.56,5.16 66.67,5.16C67.88,5.16 68.93,5.46 69.81,6.07C70.69,6.66 71.27,7.57 71.54,8.78L70.6,8.4C70.99,7.42 71.66,6.64 72.62,6.05C73.58,5.46 74.7,5.16 75.98,5.16ZM91.09,18.14C89.73,18.14 88.53,17.86 87.49,17.3C86.47,16.74 85.67,15.98 85.09,15C84.53,14.02 84.25,12.9 84.25,11.64C84.25,10.38 84.52,9.26 85.07,8.28C85.63,7.3 86.39,6.54 87.35,6C88.32,5.44 89.42,5.16 90.63,5.16C91.87,5.16 92.95,5.43 93.9,5.98C94.84,6.52 95.58,7.29 96.11,8.28C96.65,9.26 96.92,10.4 96.92,11.71C96.92,11.81 96.91,11.92 96.9,12.05C96.9,12.18 96.89,12.3 96.87,12.41H86.05V10.75H95.67L94.74,11.33C94.75,10.51 94.59,9.78 94.23,9.14C93.88,8.5 93.39,8.01 92.77,7.66C92.16,7.29 91.45,7.1 90.63,7.1C89.83,7.1 89.12,7.29 88.5,7.66C87.87,8.01 87.39,8.51 87.03,9.17C86.68,9.81 86.51,10.54 86.51,11.38V11.76C86.51,12.61 86.7,13.37 87.08,14.04C87.48,14.7 88.03,15.21 88.74,15.58C89.44,15.94 90.25,16.13 91.16,16.13C91.91,16.13 92.59,16 93.2,15.74C93.83,15.49 94.37,15.1 94.83,14.59L96.11,16.08C95.53,16.75 94.81,17.26 93.95,17.62C93.1,17.97 92.15,18.14 91.09,18.14ZM103.77,18.14C102.71,18.14 101.71,18 100.75,17.71C99.8,17.42 99.06,17.07 98.51,16.66L99.47,14.83C100.02,15.2 100.69,15.51 101.49,15.77C102.29,16.02 103.11,16.15 103.94,16.15C105.01,16.15 105.78,16 106.24,15.7C106.72,15.39 106.96,14.97 106.96,14.42C106.96,14.02 106.82,13.71 106.53,13.49C106.24,13.26 105.86,13.1 105.38,12.98C104.91,12.87 104.39,12.78 103.82,12.7C103.24,12.6 102.67,12.49 102.09,12.36C101.51,12.22 100.99,12.02 100.51,11.78C100.03,11.53 99.64,11.18 99.35,10.75C99.07,10.3 98.92,9.71 98.92,8.98C98.92,8.21 99.14,7.54 99.57,6.96C100,6.38 100.61,5.94 101.39,5.64C102.19,5.32 103.14,5.16 104.23,5.16C105.06,5.16 105.9,5.26 106.75,5.47C107.61,5.66 108.31,5.94 108.86,6.31L107.87,8.14C107.3,7.75 106.7,7.49 106.07,7.34C105.45,7.2 104.83,7.13 104.2,7.13C103.19,7.13 102.44,7.3 101.95,7.63C101.45,7.95 101.2,8.37 101.2,8.88C101.2,9.31 101.35,9.65 101.63,9.89C101.94,10.11 102.32,10.29 102.79,10.42C103.27,10.54 103.79,10.66 104.37,10.75C104.95,10.83 105.52,10.94 106.1,11.09C106.67,11.22 107.19,11.4 107.66,11.64C108.14,11.88 108.52,12.22 108.81,12.65C109.11,13.08 109.27,13.66 109.27,14.38C109.27,15.14 109.04,15.81 108.59,16.37C108.15,16.93 107.51,17.37 106.7,17.69C105.88,17.99 104.91,18.14 103.77,18.14Z</string>
    <string name="pathArtistas">M0.976,19L8.584,2.2H10.96L18.592,19H16.072L9.28,3.544H10.24L3.448,19H0.976ZM4.216,14.8L4.864,12.88H14.32L15.016,14.8H4.216ZM20.762,19V6.28H22.97V9.736L22.754,8.872C23.106,7.992 23.698,7.32 24.53,6.856C25.362,6.392 26.386,6.16 27.602,6.16V8.392C27.506,8.376 27.41,8.368 27.314,8.368C27.234,8.368 27.154,8.368 27.074,8.368C25.842,8.368 24.866,8.736 24.146,9.472C23.426,10.208 23.066,11.272 23.066,12.664V19H20.762ZM35.325,19.144C34.045,19.144 33.053,18.8 32.349,18.112C31.645,17.424 31.293,16.44 31.293,15.16V3.496H33.597V15.064C33.597,15.752 33.765,16.28 34.101,16.648C34.453,17.016 34.949,17.2 35.589,17.2C36.309,17.2 36.909,17 37.389,16.6L38.109,18.256C37.757,18.56 37.333,18.784 36.837,18.928C36.357,19.072 35.853,19.144 35.325,19.144ZM29.133,8.176V6.28H37.245V8.176H29.133ZM40.895,19V6.28H43.199V19H40.895ZM42.047,3.832C41.599,3.832 41.223,3.688 40.919,3.4C40.631,3.112 40.487,2.76 40.487,2.344C40.487,1.912 40.631,1.552 40.919,1.264C41.223,0.976 41.599,0.832 42.047,0.832C42.495,0.832 42.863,0.976 43.151,1.264C43.455,1.536 43.607,1.88 43.607,2.296C43.607,2.728 43.463,3.096 43.175,3.4C42.887,3.688 42.511,3.832 42.047,3.832ZM51.246,19.144C50.19,19.144 49.182,19 48.222,18.712C47.278,18.424 46.534,18.072 45.99,17.656L46.95,15.832C47.494,16.2 48.166,16.512 48.966,16.768C49.766,17.024 50.582,17.152 51.414,17.152C52.486,17.152 53.254,17 53.718,16.696C54.198,16.392 54.438,15.968 54.438,15.424C54.438,15.024 54.294,14.712 54.006,14.488C53.718,14.264 53.334,14.096 52.854,13.984C52.39,13.872 51.87,13.776 51.294,13.696C50.718,13.6 50.142,13.488 49.566,13.36C48.99,13.216 48.462,13.024 47.982,12.784C47.502,12.528 47.118,12.184 46.83,11.752C46.542,11.304 46.398,10.712 46.398,9.976C46.398,9.208 46.614,8.536 47.046,7.96C47.478,7.384 48.086,6.944 48.87,6.64C49.67,6.32 50.614,6.16 51.702,6.16C52.534,6.16 53.374,6.264 54.222,6.472C55.086,6.664 55.79,6.944 56.334,7.312L55.35,9.136C54.774,8.752 54.174,8.488 53.55,8.344C52.926,8.2 52.302,8.128 51.678,8.128C50.67,8.128 49.918,8.296 49.422,8.632C48.926,8.952 48.678,9.368 48.678,9.88C48.678,10.312 48.822,10.648 49.11,10.888C49.414,11.112 49.798,11.288 50.262,11.416C50.742,11.544 51.27,11.656 51.846,11.752C52.422,11.832 52.998,11.944 53.574,12.088C54.15,12.216 54.67,12.4 55.134,12.64C55.614,12.88 55.998,13.216 56.286,13.648C56.59,14.08 56.742,14.656 56.742,15.376C56.742,16.144 56.518,16.808 56.07,17.368C55.622,17.928 54.99,18.368 54.174,18.688C53.358,18.992 52.382,19.144 51.246,19.144ZM63.989,19.144C62.709,19.144 61.717,18.8 61.014,18.112C60.31,17.424 59.958,16.44 59.958,15.16V3.496H62.262V15.064C62.262,15.752 62.43,16.28 62.765,16.648C63.118,17.016 63.613,17.2 64.254,17.2C64.974,17.2 65.574,17 66.053,16.6L66.773,18.256C66.422,18.56 65.997,18.784 65.502,18.928C65.021,19.072 64.518,19.144 63.989,19.144ZM57.798,8.176V6.28H65.91V8.176H57.798ZM77.455,19V16.312L77.335,15.808V11.224C77.335,10.248 77.047,9.496 76.471,8.968C75.911,8.424 75.063,8.152 73.927,8.152C73.175,8.152 72.439,8.28 71.719,8.536C70.999,8.776 70.391,9.104 69.895,9.52L68.935,7.792C69.591,7.264 70.375,6.864 71.287,6.592C72.215,6.304 73.183,6.16 74.191,6.16C75.935,6.16 77.279,6.584 78.223,7.432C79.167,8.28 79.639,9.576 79.639,11.32V19H77.455ZM73.279,19.144C72.335,19.144 71.503,18.984 70.783,18.664C70.079,18.344 69.535,17.904 69.151,17.344C68.767,16.768 68.575,16.12 68.575,15.4C68.575,14.712 68.735,14.088 69.055,13.528C69.391,12.968 69.927,12.52 70.663,12.184C71.415,11.848 72.423,11.68 73.687,11.68H77.719V13.336H73.783C72.631,13.336 71.855,13.528 71.455,13.912C71.055,14.296 70.855,14.76 70.855,15.304C70.855,15.928 71.103,16.432 71.599,16.816C72.095,17.184 72.783,17.368 73.663,17.368C74.527,17.368 75.279,17.176 75.919,16.792C76.575,16.408 77.047,15.848 77.335,15.112L77.791,16.696C77.487,17.448 76.951,18.048 76.183,18.496C75.415,18.928 74.447,19.144 73.279,19.144ZM87.551,19.144C86.495,19.144 85.487,19 84.527,18.712C83.583,18.424 82.839,18.072 82.295,17.656L83.255,15.832C83.799,16.2 84.471,16.512 85.271,16.768C86.071,17.024 86.887,17.152 87.719,17.152C88.791,17.152 89.559,17 90.023,16.696C90.503,16.392 90.743,15.968 90.743,15.424C90.743,15.024 90.599,14.712 90.311,14.488C90.023,14.264 89.639,14.096 89.159,13.984C88.695,13.872 88.175,13.776 87.599,13.696C87.023,13.6 86.447,13.488 85.871,13.36C85.295,13.216 84.767,13.024 84.287,12.784C83.807,12.528 83.423,12.184 83.135,11.752C82.847,11.304 82.703,10.712 82.703,9.976C82.703,9.208 82.919,8.536 83.351,7.96C83.783,7.384 84.391,6.944 85.175,6.64C85.975,6.32 86.919,6.16 88.007,6.16C88.839,6.16 89.679,6.264 90.527,6.472C91.391,6.664 92.095,6.944 92.639,7.312L91.655,9.136C91.079,8.752 90.479,8.488 89.855,8.344C89.231,8.2 88.607,8.128 87.983,8.128C86.975,8.128 86.223,8.296 85.727,8.632C85.231,8.952 84.983,9.368 84.983,9.88C84.983,10.312 85.127,10.648 85.415,10.888C85.719,11.112 86.103,11.288 86.567,11.416C87.047,11.544 87.575,11.656 88.151,11.752C88.727,11.832 89.303,11.944 89.879,12.088C90.455,12.216 90.975,12.4 91.439,12.64C91.919,12.88 92.303,13.216 92.591,13.648C92.895,14.08 93.047,14.656 93.047,15.376C93.047,16.144 92.823,16.808 92.375,17.368C91.927,17.928 91.295,18.368 90.479,18.688C89.663,18.992 88.687,19.144 87.551,19.144Z</string>
    <string name="login">Ingresar</string>
    <string name="username">Nombre de Usuario</string>
    <string name="password">PassWord</string>
    <string name="ingresar_con_facebook">Ingresar con FaceBook</string>
    <string name="agregar">Agregar</string>
    <string name="MsgProxima">Proxima Alarma sonara dentro de 8 horas</string>
    <string name="alarma_voz">Alarma-Voz</string>
    <string name="cronometro">Cronometro</string>
    <string name="crear_alarma">Crear Alarma</string>
    <string name="cancelar_crear">Cancelar</string>
    <string name="aceptar_crear">Aceptar</string>
    <string name="alarma_rapida_con_voz">Alarma Rapida con Voz</string>
    <string name="olvidaste_la_clave"><u>Olvidaste la Clave?</u></string>
    <string name="inscribete"><u>INSCRIBETE</u></string>
    <string name="alarma">Alarma</string>
    <string name="alarmasub"><u>Alarma</u></string>
    <string name="alarma_vozsub"><u>alarma-voz</u></string>
</resources>