<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/Rosado"
        tools:context=".view.LoginFragment">

        <!-- TODO: Update blank fragment layout -->

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@color/Naranja1"
            android:orientation="vertical"
            android:padding="30dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/textTituloLista"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alarma_rapida_con_voz"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="28sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">


                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="180dp"
                        android:layout_height="180dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/pngwing"
                        tools:src="@drawable/pngwing"
                        tools:srcCompat="@drawable/pngwing" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="50dp"
                        android:layout_weight="1"
                        android:text="Diga:"
                        android:textColor="@color/black"
                        android:textSize="44sp" />

                </LinearLayout>

                <TextView
                    android:id="@+id/textParar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="Ey Alarma, Para"
                    android:textAlignment="textEnd"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="Ey Alarma, Duracion"
                    android:textAlignment="textEnd"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textDosMinutos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:text="Ejemplo: Ey Alarma, Dos minutos"
                    android:textAlignment="textEnd"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="01:00"
            android:textColor="@color/black"
            android:textSize="96sp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/Fucsia"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/btnAlarma"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:backgroundTint="@color/Fucsia"
                android:text="@string/alarma"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btnVoz"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:backgroundTint="@color/Fucsia"
                android:text="@string/alarma_vozsub"
                android:textColor="@color/design_default_color_secondary" />

            <Button
                android:id="@+id/btnCron"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:backgroundTint="@color/Fucsia"
                android:text="@string/cronometro"
                android:textColor="@color/white" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>